[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "test_drscook"
version = "0.1.0"
description = "A Demo for my stackoverflow question"
dependencies = [
    "codetiming",
    #"helpers-drscook@git+https://github.com/drscook/helpers",
    "temp@git+https://github.com/drscook/REU_temp",
]
