[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "test_drscook"
version = "1.0.0"
#dynamic = ["version"]
description = "A Demo for my stackoverflow question"
dependencies = [
    "codetiming",
    #"helpers-drscook@git+https://github.com/drscook/helpers",
    "REU_temp@git+https://github.com/drscook/REU_temp",
]

[tool.hatch.version]
path = "test_drscook/__about__.py"
