[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "test_drscook"
dynamic = ["version"]
description = "A Demo for my stackoverflow question"
dependencies = [
    "codetiming",
    #"helpers-drscook@git+https://github.com/drscook/helpers",
    "test_drscook2@git+https://github.com/drscook/test_drscook2",
]

[tool.hatch.version]
path = "test_drscook/__about__.py"

# hi